Decreased font size of stats text to correct overflow issue on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -307,12 +307,10 @@ nav {
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   
   text-align: center;
-  font-size: 2rem;
+  font-size: 20px;
 }
 
-.stat{
-  font-size: 2rem;
-}
+
 
 
 
